--- a/app/views/principal/index.html.erb
+++ b/app/views/principal/index.html.erb
@@ -1,1 +1,6 @@
-<h1>Hola como estan</h1>
+<h2>Inicio</h2>
+
+<%=link_to 'Formulario', new_form_path%>
+
+<%= range_field :thing1, :in => 0..100, :step => '.1' %> <br>
+
