--- a/app/views/forms/new.html.erb
+++ b/app/views/forms/new.html.erb
@@ -22,7 +22,7 @@
 
   </script>
   <body>
-
+<br><br><br>
   <%=form_with scope: :forms, local: true do |form|%> 
     <center>
       <div class="panel panel default">
@@ -71,7 +71,7 @@
                   <div class="input-group-prepend">
                     <div class="input-group-text">@</div>
                   </div>
-                <%= form.text_field :name, class: "form-control", placeholder: "Nonmbre empresa, equipo o persona"%>
+                <%= form.text_field :name, class: "form-control", placeholder: "Nombre empresa, equipo o persona"%>
                 </div>
               </div>
             </div>
