--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,3 +1,4 @@
+<br><br><br>
 <%= form_with(model: user, local: true) do |form| %>
   <% if user.errors.any? %>
     <div id="error_explanation">
@@ -33,8 +34,8 @@
                         <br>
                         <div class="container">
                         
-                        <%= form.label :Contrasena%>
-                        <%= form.text_field :password, placeholder: "Contrasena", class: "form-control"%>
+                        <%= form.label :Contrasenia%>
+                        <%= form.password_field :password, placeholder: "Contrasena", class: "form-control"%>
                         
                         </div><br>
                         <div class="container">
