Index, layout cambiado

--- a/app/views/principal/index.html.erb
+++ b/app/views/principal/index.html.erb
@@ -1,4 +1,33 @@
 <br><br><br><br>
-<h1>Inicio</h1>
-<%= range_field :thing1, :in => 0..100, :step => '.1' %> <br>
 
+<div class="container-fluid">
+  <div class="row content">
+    <div class="col-sm-3 sidenav">
+      <h4>OKR</h4>
+      <br>
+      <div class="input-group">
+      <%= range_field :thing1, :in => 0..100, :step => '.1' %> <br>
+      </div>
+    </div>
+
+    <div class="col-sm-9">
+      <h2><small> Objectives Key Results</small></h2>
+      <hr>
+      <h4><small>Historia</small></h2>
+      
+      <p>Desde la década de los 50 las empresas vienen aplicando una gran variedad de técnicas de gestión pensadas para mejorar el rendimiento de los empleados. Peter Drucker introdujo la Administración por Objetivos (APO), un proceso en el que directivos y empleados están de acuerdo con los objetivos y con lo que deben hacer para alcanzarlos. 30 años después, en la década de los 80, las siglas S.M.A.R.T. y KPI’s empezaron a hacerse un hueco en la gestión empresarial. Y fue en 1999 cuando se escuchó por primera vez el concepto de OKR’s, en boca de John Doerr, impulsor de esta metodología y responsable directo de que Google la haya introducido en su gestión.  </p>
+      <br><br>
+
+      <h4><small>Que son los okr?</small></h4>
+      <p>OKR son las siglas que se refieren a Objectives and Key Results (Objetivos y Resultados Clave).
+
+      Podemos definirlo como un método de trabajo interno que, mediante la fijación de objetivos y de sus correspondientes resultados clave, permite organizar el trabajo de la empresa, definir grupos de trabajo y realizar un seguimiento del progreso de cada empleado.
+      
+      ¿Qué se consigue con los OKR’s? alinear el trabajo de toda la organización y marcar un único rumbo para todos sus miembros. Sin duda, un método innovador que permite definir los objetivos de la empresa y del equipo y, en base a los resultados obtenidos, medir el progreso de cada uno de ellos.  </p>
+            </div>
+          </div>
+        </div>
+
+<footer class="container-fluid">
+  <p>Footer Text</p>
+</footer>
