--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,6 @@
+<br><br>
+<center>
+<div class="container">
 <p id="notice"><%= notice %></p>
 
 <h1>Users</h1>
@@ -27,3 +30,4 @@
 <br>
 
 <%= link_to 'New User', new_user_path %>
+</div></center  >
