--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,6 @@
-<br><br><br><br><br>
+<br><br><br><br>
+<center>
+<div class="container">
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -13,3 +15,6 @@
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
+</div>
+</center>
+
