--- a/app/views/forms/new.html.erb
+++ b/app/views/forms/new.html.erb
@@ -23,7 +23,7 @@
   </script>
   <body>
 <br><br><br>
-  <%=form_with scope: :forms, local: true do |form|%> 
+  <%=form_with scope: :form, local: true do |form|%> 
     <center>
       <div class="panel panel default">
         <div class="panel">
