--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,17 +1,5 @@
 <br><br><br>
 <%= form_with(model: user, local: true) do |form| %>
-  <% if user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
-
-      <ul>
-      <% user.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
   <html>
     <title>Login 2</title>
     <head></head>
@@ -23,10 +11,21 @@
                 <div class="panel">
                         <h2 class="panel-header"><strong>Registro</strong></h2>
                     </div>
-
                 <div class="row justify-content-md-center">
                     <div class="col-sm"> </div>
                     <div class="col-md-6">
+                    <% if user.errors.any? %>
+                    <div  class="alert alert-danger">
+                    
+                      <h5><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h5>
+                      <ul class="list-group">
+                      <% user.errors.full_messages.each do |message| %>
+                        <li class=><%= message %></li>
+                      <% end %>
+                      </ul>
+                    </div>
+                  <% end %>
+
                         <div class="container">
                         <%=form.label :Usuaio %>
                         <%= form.text_field :name, placeholder: "Usuaio...", class: "form-control"%>
