formulario de objetivos creado

--- a/app/views/forms/show.html.erb
+++ b/app/views/forms/show.html.erb
@@ -5,9 +5,9 @@
 </p>
 
 <p class="campos">
- <%= objective.period_value %>
+ <%= @objective.period_value %>
  <br>
- <%= objective.time_id %>
+ <%= @objective.time_id %>
 </p>
 <br>
 <p><%= link_to 'Back', articles_path %></p>
