--- a/app/views/forms/index.html.erb
+++ b/app/views/forms/index.html.erb
@@ -15,7 +15,7 @@
   </thead>
 
   <tbody>
-    <% @users.each do |user| %>
+    <% @objectives.each do |objective| %>
       <tr>
         <td><%= objective.description %></td>
         <td><%= objective.period_value %></td>
@@ -29,4 +29,4 @@
 </table>
 
 <br>
-</div></center  >
+</div></center>
