--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <div class="animate">
     <nav class="navbar header-top fixed-top navbar-expand-lg  navbar-dark bg-dark">
       <a class="navbar-brand"><%=link_to 'Inicio', root_path%></a>
-      <a class="navbar-brand"><%=link_to 'Formulario', new_form_path%></a>
+      <a class="navbar-brand"><%=link_to 'Formulario', new_objective_path%></a>
       <a class="navbar-brand"><%=link_to 'User', new_user_path%></a>
       
         <span class="navbar-toggler-icon"></span>
