--- a/app/views/objectives/edit.html.erb
+++ b/app/views/objectives/edit.html.erb
@@ -1,6 +1,6 @@
 
 
-<%= render 'form', user: @user %>
+<%= render 'form', objective: @objective %>
 
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+<%= link_to 'Show', @objective %> |
+<%= link_to 'Back', objectives_path %>
