--- a/app/views/objectives/new.html.erb
+++ b/app/views/objectives/new.html.erb
@@ -1,5 +1,5 @@
 
 
-<%= render 'form', user: @user %>
+<%= render 'form', objective: @objective %>
 
-<%= link_to 'Back', users_path %>
+<%= link_to 'Back', objectives_path %>
