--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -27,13 +27,13 @@
                   <% end %>
 
                         <div class="container">
-                        <%=form.label :Usuaio %>
+                        <%=form.label :Usuario %>
                         <%= form.text_field :name, placeholder: "Usuaio...", class: "form-control"%>
                         </div>
                         <br>
                         <div class="container">
                         
-                        <%= form.label :Contrasenia%>
+                        <%= form.label :Contraseña%>
                         <%= form.password_field :password, placeholder: "Contrasena", class: "form-control"%>
                         
                         </div><br>
