--- a/app/views/objectives/_form.html.erb
+++ b/app/views/objectives/_form.html.erb
@@ -1,36 +1,29 @@
 <br><br><br>
 <center>
 <h1>Formulario</h1>
-<%= form_for(objective) do |f| %><br>
-  <%= f.label :Descripcion%><br>
-  <%= f.text_field :description, placeholder: "Escriba el objetivo", class:"form-control"%>
+  <%= form_with(model: objective, local: true) do |form| %><br>
+  <%= form.label :Descripcion%><br>
+  <%= form.text_field :description, placeholder: "Escriba el objetivo", class:"form-control"%>
   <br>
-  <%= f.label :Periodo%><br>
-  <%= f.text_field :period_value, placeholder: "Escriba el objetivo", class:"form-control"%>
+  <%= form.label :Periodo%><br>
+  <%= form.text_field :period_value, placeholder: "Escriba el objetivo", class:"form-control"%>
   <br>
-  <%= f.label :Numero%><br>
-  <%= select_tag(
-                :timepo_id,
-                options_for_select(
-                  [["Selecciona una", ""], ["Años","1"], ["Meses","2"], ["Semanas","3"], ["Dias","4"]]), 
-                  :class =>'form-control custom-select')%>
+  <%= form.label :Numero%><br>
+  <%=form.text_field :tiempo_id, placeholder: "Escirba periodo de tiempo", class:"form-control"%>
   <br>
-  <%= f.fields_for(:key_results) do |key_result_form| %>
-    <%= f.label :DescripcionOKR %><br>
-    <%=key_result_form.text_field :description, class:"form-control"%>
+  <%= form.fields_for(:key_results) do |result| %>
+    <br><%= result.label :Descripcion_OKR %>
+    <%=result.text_field :description, class:"form-control"%>
     <br>
-    <%= f.label :Numero%><br>
-    <%= select_tag(
-                :kr_measure_id,
-                options_for_select(
-                  [["Selecciona una", ""], ["POrcentaje","1"], ["Si/NO","2"], ["Numero","3"]]), 
-                  :class =>'form-control custom-select')%>
+    <%= result.label :Medida%><br>
+    <%= result.text_field :kr_measure_id, class:"form-control"%>
+  
     <br><br>
     <%end%>
     <br>
     <div class=”actions”>
 
-   <%= f.submit %>
+   <%= form.submit %>
 </div>
 <%end%>
 
