--- a/app/views/objectives/index.html.erb
+++ b/app/views/objectives/index.html.erb
@@ -1,17 +1,14 @@
-<br><br>
-<center>
-<div class="container">
 <p id="notice"><%= notice %></p>
 
-<h1>Objectivos</h1>
+<h1>Objectives</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Usuario</th>
-      <th>Descripcion</th>
-      <th>Numero</th>
-      <th>TIempo</th>
+      <th>Description</th>
+      <th>Period value</th>
+      <th>Tiempo</th>
+      <th>User</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -19,20 +16,18 @@
   <tbody>
     <% @objectives.each do |objective| %>
       <tr>
-        <td><%= objective.user.name %></td>
         <td><%= objective.description %></td>
         <td><%= objective.period_value %></td>
         <td><%= objective.tiempo.name %></td>
+        <td><%= objective.user.name %></td>
         <td><%= link_to 'Show', objective %></td>
         <td><%= link_to 'Edit', edit_objective_path(objective) %></td>
         <td><%= link_to 'Destroy', objective, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
-    <% end %><br>
-   
+    <% end %>
   </tbody>
 </table>
 
 <br>
 
-<%= link_to 'New objective', new_objective_path %>
-</div></center  >
+<%= link_to 'New Objective', new_objective_path %>
