--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
     <nav class="navbar header-top fixed-top navbar-expand-lg  navbar-dark bg-dark">
       <a class="navbar-brand"><%=link_to 'Inicio', root_path%></a>
       <a class="navbar-brand"><%=link_to 'Formulario', new_objective_path%></a>
+      <a class="navbar-brand"><%=link_to 'Key Results', new_key_result_path%></a>
       <a class="navbar-brand"><%=link_to 'User', new_user_path%></a>
       
         <span class="navbar-toggler-icon"></span>
