--- a/app/views/key_results/edit.html.erb
+++ b/app/views/key_results/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing Key Result</h1>
+<center>
 
 <%= render 'form', key_result: @key_result %>
 
 <%= link_to 'Show', @key_result %> |
 <%= link_to 'Back', key_results_path %>
+</center>
